Committing for back up because I fucked everything when I deployed to Heroku

--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,6 @@ theme: antares
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/celestialcinnamon/antares-blog.git
+  branch: master
