--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-markdown-it-plus": "^1.0.4",
+    "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.1"
   }
