Added two new articles

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # # Site
 title: Antares Programming
 subtitle:
-description: Current trends nad best practices for Filipino developers.
+description: Current trends and best practices for Filipino developers.
 keywords: programming, Filipino, Tagalog, Philippines, web, css, html, js
 author: Francis Rubio <francoisoibur21@gmail.com>
 language: tl
